Review with Mie

--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -22,7 +22,7 @@ Vi har igennem udviklingsprocessen af appen udført seks brugertests med de to b
 Undervejs i vores brugertests fandt vi bugs, fejl, mangler og uklarheder. Vi fandt også ud af hvilke ting, der var vigtige at holde fast i og som fungerede godt. De nedenstående afsnit går mere i dybden med de enkelte brugertests, men indeholder stadig kun de vigtigste erfaringer, vi gjorde os.
 
 \subsubsection{Brugertest 1}
-Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Det gav alligevel anledning til ændringer. Brugeren var meget forvirret over, hvorfor hun ikke kunne tilføje flere bede. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt i forhold til brugerens definitioner, og at det, vi havde kaldt et ``haveområde'', skulle omdøbes til et ``bed''. Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv nok til at hun kunne finde den.
+Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Det gav alligevel anledning til ændringer. Brugeren var meget forvirret over, hvorfor hun ikke kunne tilføje flere bede. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt, og at det, vi havde kaldt et ``haveområde'', skulle omdøbes til et ``bed''. Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv nok til at hun kunne finde den.
 
 \subsubsection{Brugertest 2}
 Ved den anden brugertest, sammen med bruger 1, efter sprint 5, blev brugertesten udført som en tænke-højt-test. En af hovedpointerne var, at der skulle flere forklaringer til siderne. Hun var lidt forvirret over hvad, hun skulle på den enkelte side i mange tilfælde, så det valgte vi at fokusere på at gøre mere tydeligt fremadrettet.
@@ -43,7 +43,7 @@ Brugeren var forvirret over måden, som et bed blev illustreret på, fordi hver 
 
 Vi opdagede, at et af de skærmbilleder, som brugeren kom til, når hun skulle oprette et nyt bed, ikke var lavet til skærmstørrelsen på hendes telefon, da den var mindre end de skærmstørrelser, vi havde testet på, og noget af teksten blev derfor ikke vist. Efter denne opdagelse begyndte vi at teste på en emulator der var tilsvarende bruger 1's telefon i forhold til skærmstørrelse og version af Android, for at sikre en god brugeroplevelse for alle, der kan køre appen.
 
-Brugeren var forvirret over vores måde at vise planter, som kan plantes, på og syntes, der manglede forklaring. På det tidspunkt fungerede det ved, at hvis et bed havde tomme felter, foreslog appen nogle planter, der var sæson for lige nu, som man derefter kunne trykke på for at så. Hun påpegede, at det ikke gav så meget mening, at man kunne plante en ny plante direkte i bedet med det samme, da man vil så de frø man har, og ikke hvad appen giver dig af idéer. Appen skal derimod give noget information på forhånd, man kan reagere på senere. Den tankegang tog vi meget til os, og vores fremadrettede syn på appen blev, at den skulle fungere som visualisering af mange informationer frem for at håndtere og styre alt for dig.
+Brugeren var forvirret over vores måde at vise planter, som er i sæson, på og syntes, der manglede forklaring. På det tidspunkt fungerede det ved, at hvis et bed havde tomme felter, foreslog appen nogle planter, der var sæson for lige nu, som man derefter kunne trykke på for at så. Hun påpegede, at det ikke gav så meget mening, at man kunne plante en ny plante direkte i bedet med det samme, da man ikke vil have de frø og først skal ud at købe dem. Appen skal derimod give noget information på forhånd, man kan reagere på senere. Den tankegang tog vi meget til os, og vores fremadrettede syn på appen blev, at den skulle fungere som visualisering af mange informationer frem for at håndtere og styre alt for dig.
 
 \subsubsection{Brugertest 4}
 Denne brugertest var mere spontan og i samarbejde med bruger 2 efter sprint 7. Brugeren gav udtryk for, at det ikke var tydeligt hvad, et bed repræsenterede --- det var indforstået. Han ønskede en forklaring til hvad et bed er defineret som i appen. Her kunne man også lave en forklaring til hele appen generelt, så brugeren også fik en forståelse for andre dele. Denne mangel kan kobles til, da vi under første brugertest opdagede, at vi ikke havde brugt det rigtige fagterm for et bed, men bare kaldt det et ``område''. Dette ændrede vi straks med tanken på, at brugerne var de bedrevidende, uden at tænke på, at det ikke nødvendigvis er alle fremtidige brugere af appen, der endnu har opbygget et fagligt ordforråd om køkkenhaver. Det endte derfor med, at appen fik en forklaring på bede generelt samt appens opbygning.
