--- a/report/future.tex
+++ b/report/future.tex
@@ -10,7 +10,7 @@ Nogle mennesker orienterer sig meget visuelt, og her ville det give god mening, 
 Baseret på vores brugertests beskrevet tidligere, var der ønske om en større inddeling af bede. Det ville derfor være oplagt at implementere i en fremtidig version. Dette ønske vurderede vi ikke, der var tid til at implementere på en optimal måde, da ønskerne først kom efter sprint 7 ud af 12. Hvis man kigger på vores burn-up chart (se figur \ref{burn-up}), lader det til at være en god beslutning, da vi først nåede i mål med vores backlog i sidste sprint, kun med få story points mindre end andre sprints.
 
 \subsection{Sortering af listen over planter}
-Når brugeren skal oprette eller redigere et bed, får de en liste af alle prædefinerede og selvoprettede planter. Der er lige nu ingen sortering i den rækkefølge, de bliver vist i.  Man kunne lave en lignende sortering i listen over planter der kan plantes. Her er der flere forskellige muligheder:
+Når brugeren skal oprette eller redigere et bed, får de en liste af alle prædefinerede og selvoprettede planter. Der er lige nu ingen sortering i den rækkefølge, de bliver vist i.  Man kunne lave en lignende sortering i listen over planter, der er i sæson. Her er der flere forskellige muligheder:
 \begin{itemize}
    \item Lade brugeren definere favorit planter, som vises først
    \item Sortere på senest brugt. Dette er især nyttigt, hvis brugeren skal indtaste samme plante flere gange i træk
