--- a/report/brugervejledning.tex
+++ b/report/brugervejledning.tex
@@ -36,7 +36,7 @@ For at få det til at ligne din egen have mest muligt, kan du holde inde på et 
 \end{figure}
 \end{minipage} \hfill
 \begin{minipage}{0.5\textwidth}
-Hvis du trykker på et bed, har du mulighed for at redigere eller slette bedet ved at klikke på en knap øverst til højre. Når du redigerer bedet kan du ændre størrelsen, planterne og, afslutningvis, navnet, når du trykker på gem. 
+Hvis du trykker på et bed, har du mulighed for at redigere eller slette bedet ved at klikke på de respektive knapper øverst til højre. Når du redigerer bedet kan du ændre størrelsen og planterne. Afslutningvis kan du ændre navnet, når du trykker på gem. 
 
 Hvis du trykker på en bestemt plante i bedet, kan du indtaste detaljer, der vedrører denne plante specifikt. Her kan du f.eks. indtaste en bestemt sort, holde styr på hvornår den er blevet vandet og skrive noter. Hvis du vil have mere generel info om planten, kan du trykke på ``Til leksikon''.
 \end{minipage}
@@ -54,7 +54,7 @@ I side-menuen, som kan åbnes øverst til venstre, kan du se en oversigt over al
 \end{minipage} 
 
 \subsection{Se og opret planter}
-Tryk på side-menuen og åbn leksikonnet. Her vil du få en oversigt over alle de planter, som appen kommer med. Du kan søge efter en bestemt plante eller scrolle gennem listen. Hvis du trykker på en plante, vil du blive ført til en informationsside, hvor du kan se alt det data, som appen kender om den givne plante. Hvis du savner en plante, gerne vil have en separat plante i appen for en bestemt sort eller lignende, kan du i bunden klikke på knappen: ``Ny plante''. Her har du mulighed for at oprette dine egne planter og derefter bruge dem præcis som de prædefinerede.
+Tryk på side-menuen og åbn leksikonnet. Her vil du få en oversigt over alle de planter, som appen kommer med. Du kan søge efter en bestemt plante eller scrolle gennem listen. Hvis du trykker på en plante, vil du blive ført til en informationsside, hvor du kan se alt det data, som appen kender om den givne plante. Hvis du savner en plante, gerne vil have en separat plante i appen for en bestemt sort eller lignende, kan du i bunden klikke på knappen ``Ny plante''. Her har du mulighed for at oprette dine egne planter og derefter bruge dem præcis som de prædefinerede.
 
 \subsection{Hvilke planter er i sæson?}
 Hvis du fra side-menuen navigerer til planter i sæson, vil du se to lister: En liste over alle planter i sæson, der kan plantes udendørs, og en liste over alle planter i sæson, der kan plantes i drivhus. På den måde kan du altid se, hvilke frø du skal købe, hvis du gerne vil så noget nyt lige nu. 
@@ -84,5 +84,5 @@ Som nævnt tidligere kan du flytte rundt på dine bede i oversigten over bede. N
 \end{figure}
 \end{minipage} \hfill
 \begin{minipage}{0.55\textwidth}
-    Hvis du har valgt at slå lokationsdeling til, kan du under vejrdata se hvilken placering appen henter data fra, samt hvornår appen sidst har registreret en regnvejrsdag. Du kan også se hvor mange mm regn, der er faldet på denne dag. Denne information bruger appen i samspil med dine egne indtastede data om vanding af dine planter. Hvis der er gået tilstrækkelig lang tid siden du enten har vandet selv eller det har regnet, vil appen foreslå, at du tjekker om de har brug for vand --- dette kan ses inde på de enkelte bede som på vist på figur \ref{plants-to-water}.
+Hvis du har valgt at slå lokationsdeling til, kan du under vejrdata se hvilken placering appen henter data fra, samt hvornår appen sidst har registreret en regnvejrsdag. Du kan også se hvor mange mm regn, der er faldet på denne dag. Denne information bruger appen i samspil med dine egne indtastede data om vanding af dine planter. Hvis der er gået tilstrækkelig lang tid siden du enten har vandet selv eller det har regnet, vil appen foreslå, at du tjekker om de har brug for vand --- dette kan ses inde på de enkelte bede som på vist på figur \ref{plants-to-water}.
 \end{minipage} 
